--- a/HotelManagement/HotelManagement/Views/Report/ServiceByRoomTypeView.xaml
+++ b/HotelManagement/HotelManagement/Views/Report/ServiceByRoomTypeView.xaml
@@ -31,7 +31,7 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
                 <TextBlock Grid.Column="0" Text="Choose room type" FontSize="16" VerticalAlignment="Center"
-                    HorizontalAlignment="Left" Margin="8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
+                    HorizontalAlignment="Left" Margin="4" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
                 <ScrollViewer Grid.Column="1" x:Name="scvRoomTypes" VerticalScrollBarVisibility="Hidden" 
                               HorizontalScrollBarVisibility="Hidden" Margin="4 1 4 4" VerticalAlignment="Center">
                     <ItemsControl ItemsSource="{Binding RoomTypes}" HorizontalAlignment="left" Margin="0 5">
@@ -95,10 +95,10 @@
             </Grid>
             <lvc:CartesianChart Grid.Row="2" x:Name="lvc" Margin="10" Series="{Binding SeriesCollection}" LegendLocation="Right" >
                 <lvc:CartesianChart.AxisY>
-                    <lvc:Axis Title="Quantity" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
+                    <lvc:Axis Title="Revenue" LabelFormatter="{Binding YFormatter}"></lvc:Axis>
                 </lvc:CartesianChart.AxisY>
                 <lvc:CartesianChart.AxisX>
-                    <lvc:Axis x:Name="titleX" Title="Month" Labels="{Binding Labels}">
+                    <lvc:Axis x:Name="titleX" Title="{Binding SelectedMode}" Labels="{Binding Labels}">
                         <lvc:Axis.Separator>
                             <lvc:Separator Step="1"/>
                         </lvc:Axis.Separator>
