--- a/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
+++ b/HotelManagement/HotelManagement/Views/Report/TopServiceView.xaml
@@ -18,12 +18,12 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width=".37*"/>
+            <ColumnDefinition Width=".38*"/>
             <ColumnDefinition Width="0.5"/>
-            <ColumnDefinition Width=".63*"/>
+            <ColumnDefinition Width=".62*"/>
         </Grid.ColumnDefinitions>
         <!-- Top service used -->
-        <Grid Grid.Column="0" Margin="0 0 4 0">
+        <Grid Grid.Column="0" Margin="0 0 2 0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
@@ -35,43 +35,24 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Column="0" Text="Top services used" FontSize="22" FontWeight="Bold" VerticalAlignment="Center"
-                    HorizontalAlignment="Stretch" Margin="8 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
+                <TextBlock Grid.Column="0" Text="Top services used" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"
+                    HorizontalAlignment="Stretch" Margin="4 8 0 8" Foreground="{StaticResource PrimaryHueDarkBrush}"/>
                 <Grid Grid.Column="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width=".2*"/>
-                        <ColumnDefinition Width=".8*"/>
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0 0 4 0"
-                        VerticalAlignment="Center" HorizontalAlignment="Right">
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0 0 4 0">
-                            <TextBlock Text="Top:" Margin="4" VerticalAlignment="Center"/>
-                            <ComboBox x:Name="cbbTopQuantity" Padding="8 2 2 2" HorizontalAlignment="Right"
-                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="auto"
-                            ItemsSource="{Binding TopsQuantity}" SelectedItem="{Binding SelectedTopQuantity}"
-                            VerticalContentAlignment="Center" Width="52">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="SelectionChanged">
-                                        <i:InvokeCommandAction Command="{Binding ReloadQuantityCommand}" 
-                                   CommandParameter="{Binding ElementName=cbbTopQuantity}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </ComboBox>
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                            <TextBlock Text="Time report:" Margin="4" VerticalAlignment="Center"/>
-                            <DatePicker Name="dpTimeReportQuantity" Width="auto" Margin="2 0 0 0"
-                            res:DatePickerCalendar.IsMonthYear="True"
-                            res:DatePickerDateFormat.DateFormat="MM/yyyy"
-                            SelectedDate="{Binding TimeReportQuantity}">
-                                <i:Interaction.Triggers>
-                                    <i:EventTrigger EventName="SelectedDateChanged">
-                                        <i:InvokeCommandAction Command="{Binding ReloadQuantityCommand}" 
-                                   CommandParameter="{Binding ElementName=dpTimeReportQuantity}"/>
-                                    </i:EventTrigger>
-                                </i:Interaction.Triggers>
-                            </DatePicker>
-                        </StackPanel>
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <TextBlock Text="Room type:" Margin="4" VerticalAlignment="Center"/>
+                        <ComboBox Grid.Column="1" x:Name="cbbType" Padding="8 2 2 2" Margin="4"
+                          Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                          Foreground="{StaticResource PrimaryHueDarkBrush}"
+                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="32"
+                            ItemsSource="{Binding Types}" SelectedItem="{Binding SelectedType}"
+                            VerticalContentAlignment="Center" Width="auto">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
+                                   CommandParameter="{Binding ElementName=cbbType}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ComboBox>
                     </StackPanel>
                 </Grid>
             </Grid>
@@ -81,7 +62,38 @@
                     <ColumnDefinition/>
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
-                <ComboBox x:Name="cbbModeQuantity" Padding="8 2 2 2" HorizontalAlignment="Right" Margin="4"
+                <StackPanel Grid.Column="0" Orientation="Horizontal" Margin="0 0 4 0"
+                        VerticalAlignment="Center" HorizontalAlignment="Left">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Margin="0 0 4 0">
+                        <TextBlock Text="Top:" Margin="4" VerticalAlignment="Center"/>
+                        <ComboBox x:Name="cbbTopQuantity" Padding="8 2 2 2" HorizontalAlignment="Right"
+                            BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="auto"
+                            ItemsSource="{Binding TopsQuantity}" SelectedItem="{Binding SelectedTopQuantity}"
+                            VerticalContentAlignment="Center" Width="52">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectionChanged">
+                                    <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
+                                   CommandParameter="{Binding ElementName=cbbTopQuantity}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </ComboBox>
+                    </StackPanel>
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <TextBlock Text="Time report:" Margin="4" VerticalAlignment="Center"/>
+                        <DatePicker Name="dpTimeReportQuantity" Width="auto" Margin="2 0 0 0"
+                            res:DatePickerCalendar.IsMonthYear="True"
+                            res:DatePickerDateFormat.DateFormat="MM/yyyy"
+                            SelectedDate="{Binding TimeReportQuantity}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="SelectedDateChanged">
+                                    <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
+                                   CommandParameter="{Binding ElementName=dpTimeReportQuantity}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </DatePicker>
+                    </StackPanel>
+                </StackPanel>
+                <ComboBox Grid.Column="1" x:Name="cbbModeQuantity" Padding="8 2 2 2" Margin="4"
                           Style="{StaticResource MaterialDesignOutlinedComboBox}"
                           Foreground="{StaticResource PrimaryHueDarkBrush}"
                             BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="32"
@@ -89,7 +101,7 @@
                             VerticalContentAlignment="Center" Width="auto">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="SelectionChanged">
-                            <i:InvokeCommandAction Command="{Binding ReloadQuantityCommand}" 
+                            <i:InvokeCommandAction Command="{Binding ReloadCommand}" 
                                    CommandParameter="{Binding ElementName=cbbModeQuantity}"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
@@ -169,7 +181,7 @@
         </Grid>
         <Border Grid.Column="1" Background="Black"/>
         <!-- Revenue of service -->
-        <Grid Grid.Column="2" Margin="4 0 0 0">
+        <Grid Grid.Column="2" Margin="2 0 0 0">
             <local:ServiceByRoomTypeView/>
         </Grid>
     </Grid>
