--- a/HotelManagement/HotelManagement/Resources/Themes.xaml
+++ b/HotelManagement/HotelManagement/Resources/Themes.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!-- Background Colors -->
-    <SolidColorBrush x:Key="PrimaryDarkBrush" Color="#637BCF"/>
+    <SolidColorBrush x:Key="PrimaryDarkBrush" Color="#673AB7"/>
     <SolidColorBrush x:Key="PrimaryLightBrush" Color="White"/>
 
     <SolidColorBrush x:Key="btnClose" Color="#F72626"/>
