--- a/HotelManagement/HotelManagement/Resources/MenuItem.xaml
+++ b/HotelManagement/HotelManagement/Resources/MenuItem.xaml
@@ -39,6 +39,7 @@
     </DataTemplate>
     <DataTemplate DataType="{x:Type viewModels:RevenueChart}">
         <resUC:UC_RevenueChart/>
+    </DataTemplate>
     <DataTemplate DataType="{x:Type viewModels:ServiceByRoomTypeViewModel}">
         <views:ServiceByRoomTypeView/>
     </DataTemplate>
