--- a/HotelManagement/HotelManagement/Views/MainWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/MainWindow.xaml
@@ -110,7 +110,7 @@
                             </Grid>
                         </Button>
                         <Button x:Name="btnRooms" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
-                                
+                                Visibility="{Binding RoomsVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding RoomsViewCommmand}">
                             <Grid Height="40" Width="250">
@@ -134,6 +134,7 @@
                         </Button>
                         <Button x:Name="btnBooking" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                                 Height="50" Padding="0" BorderThickness="0"
+                                Visibility="{Binding BookingVisible}"
                                 Command="{Binding ReservationListViewCommand}">
                             <Grid Height="40" Width="250">
                                 <Grid.ColumnDefinitions>
@@ -156,6 +157,7 @@
                         </Button>
                         
                         <Button x:Name="btnGuests" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
+                                Visibility="{Binding GuestsVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding GuestsViewCommmand}">
                             <Grid Height="40" Width="250">
@@ -178,6 +180,7 @@
                             </Grid>
                         </Button>
                         <Button x:Name="btnServices" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
+                                Visibility="{Binding ServicesVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding ServicesViewCommmand}">
                             <Grid Height="40" Width="250">
@@ -200,6 +203,7 @@
                             </Grid>
                         </Button>
                         <Button x:Name="btnInvoices" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
+                                Visibility="{Binding InvoicesVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding InvoicesViewCommmand}">
                             <Grid Height="40" Width="250">
@@ -222,6 +226,7 @@
                             </Grid>
                         </Button>
                         <Button x:Name="btnReports" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
+                                Visibility="{Binding ReportsVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding ReportsViewCommmand}">
                             <Grid Height="40" Width="250">
@@ -244,6 +249,7 @@
                             </Grid>
                         </Button>
                         <Button x:Name="btnAccounts" Background="Transparent" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
+                                Visibility="{Binding AccountsVisible}"
                                 Height="50" Padding="0" BorderThickness="0"
                                 Command="{Binding AccountsViewCommmand}">
                             <Grid Height="40" Width="250">
