--- a/HotelManagement/HotelManagement/Views/Report/ServiceByRoomTypeView.xaml
+++ b/HotelManagement/HotelManagement/Views/Report/ServiceByRoomTypeView.xaml
@@ -62,7 +62,7 @@
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
                 </ScrollViewer>
-                <ComboBox Grid.Column="2" x:Name="cbbMode" Padding="8 2 2 2" HorizontalAlignment="Right" Margin="8"
+                <ComboBox Grid.Column="2" x:Name="cbbModeRevenue" Padding="8 2 2 2" HorizontalAlignment="Right" Margin="8"
                           Style="{StaticResource MaterialDesignOutlinedComboBox}"
                           Foreground="{StaticResource PrimaryHueDarkBrush}" FontSize="16"
                             BorderBrush="{StaticResource PrimaryHueDarkBrush}" Height="32"
@@ -71,7 +71,7 @@
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="SelectionChanged">
                             <i:InvokeCommandAction Command="{Binding SelectionChangedCommand}"
-                                   CommandParameter="{Binding ElementName=cbbMode}"/>
+                                   CommandParameter="{Binding ElementName=cbbModeRevenue}"/>
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </ComboBox>
@@ -79,7 +79,7 @@
             <Grid Grid.Row="1" Visibility="{Binding Visibility}">
                 <StackPanel Orientation="Horizontal" Margin="0 0 8 0" HorizontalAlignment="Right" VerticalAlignment="Center">
                     <TextBlock Text="Time report:" Margin="4" VerticalAlignment="Center"/>
-                    <DatePicker Name="dpTimeReport" Width="auto" Margin="2 0 0 0"
+                    <DatePicker Name="dpYearReport" Width="auto" Margin="2 0 0 0"
                             res:DatePickerCalendar.IsYear="True" 
                             res:DatePickerDateFormat.DateFormat="yyyy"
                             DisplayDateStart="{Binding DateStart}" DisplayDateEnd="{Binding DateEnd}"
@@ -87,7 +87,7 @@
                         <i:Interaction.Triggers>
                             <i:EventTrigger EventName="SelectedDateChanged">
                                 <i:InvokeCommandAction Command="{Binding ReloadMonthCommand}" 
-                                   CommandParameter="{Binding ElementName=dpTimeReport}"/>
+                                   CommandParameter="{Binding ElementName=dpYearReport}"/>
                             </i:EventTrigger>
                         </i:Interaction.Triggers>
                     </DatePicker>
