--- a/HotelManagement/HotelManagement/Views/AddServicesWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/AddServicesWindow.xaml
@@ -45,20 +45,18 @@
                 </TextBox>
             </Grid>
             <Grid Grid.Column="1">
-                <TextBox
+                <TextBlock
                     x:Name="tbRoomName"
-                    
+                    Foreground="{StaticResource PrimaryHueDarkBrush}"
                     Text="{Binding RoomName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                     Width="200"
                     FontSize="14"
                     Height="40"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
-                    VerticalContentAlignment="Center"
-                    HorizontalContentAlignment="Center"
-                    IsReadOnly="True"
+                    FontWeight="Bold"
                     Margin="0 0 35 0">
-                </TextBox>
+                </TextBlock>
             </Grid>
         </Grid>
         <Grid Grid.Row="1" Background="White">
@@ -145,8 +143,19 @@
                                 <DataTemplate>
                                     <Button Width="40" Padding="0" Background="#637BCF"
                                         Style="{StaticResource MaterialDesignRaisedButton}"
-                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.DeleteServiceCommand}">
+                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.AddServiceCommand}">
                                         <materialDesign:PackIcon Kind="Plus"/>
+                                    </Button>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.CellTemplate>
+                        </DataGridTemplateColumn>
+                        <DataGridTemplateColumn >
+                            <DataGridTemplateColumn.CellTemplate>
+                                <DataTemplate>
+                                    <Button Width="40" Padding="0" Background="#637BCF"
+                                        Style="{StaticResource MaterialDesignRaisedButton}"
+                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.RemoveServiceCommand}">
+                                        <materialDesign:PackIcon Kind="Minus"/>
                                     </Button>
                                 </DataTemplate>
                             </DataGridTemplateColumn.CellTemplate>
@@ -266,7 +275,7 @@
                             Style="{StaticResource MaterialDesignRaisedButton}"
                             ToolTip="Save"
                             Content="Save"
-                            Command="{Binding AddNewServiceCommand}"/>
+                            Command="{Binding SaveFolioCommnad}"/>
             </Grid>
         </Grid>
     </Grid>
