--- a/HotelManagement/HotelManagement/Views/ChangePasswordWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/ChangePasswordWindow.xaml
@@ -10,7 +10,7 @@
         xmlns:res="clr-namespace:HotelManagement.Resources"
         mc:Ignorable="d" FontSize="14" 
         WindowStartupLocation="CenterScreen"
-        ResizeMode="NoResize"
+        ResizeMode="NoResize" Icon="/Resources/hotel.ico"
         Title="Change Password" Height="275" Width="400">
     <Window.DataContext>
         <viewModels:ChangePasswordViewModel/>
