--- a/HotelManagement/HotelManagement/Views/Reservation/AddBookingGuestWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/AddBookingGuestWindow.xaml
@@ -13,15 +13,15 @@
         WindowStartupLocation="CenterScreen"
         SizeToContent="WidthAndHeight" Icon="/Resources/hotel.ico"
         ResizeMode="NoResize"
-        Title="Add new sharer">
-    <Grid>
+        Title="Add new sharer" Width="400">
+    <Grid Width="400">
         <Border Padding="5" Background="White"
             BorderBrush="LightGray" BorderThickness="1.5">
             <StackPanel>
                 <StackPanel>
                     <TextBox 
                         x:Name="txtboxGuestID"
-                        FontSize="14" Width="230" Margin="0,3,0,3"
+                        FontSize="14" Width="auto" Margin="5,3,5,3"
                         Text="{Binding Path=NewSharer.ID}"
                         MaxLength="10"
                         materialDesign:TextFieldAssist.CharacterCounterVisibility="Hidden"
@@ -53,7 +53,7 @@
                 </StackPanel>
 
                 <TextBox
-                    FontSize="14" Width="230" Margin="0,3,0,3"
+                    FontSize="14" Width="auto" Margin="5,3,5,3"
                     Style="{StaticResource MaterialDesignTextBox}"
                     Text="{Binding Path=NewSharer.Name}"
                     materialDesign:HintAssist.Hint="Name"
@@ -64,6 +64,7 @@
 
                 <Grid>
                     <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="auto"/>
@@ -71,7 +72,7 @@
 
                     <ComboBox
                         Grid.Column="0"
-                        Width="100" Margin="0,3,0,3"
+                        Width="auto" Margin="5,3,10,3"
                         Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                         materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"
                         materialDesign:ColorZoneAssist.Mode="SecondaryLight"
@@ -83,15 +84,15 @@
                     </ComboBox>
 
                     <DatePicker 
-                        Grid.Column="2"
-                        Width="100" FontSize="14"
+                        Grid.Column="2" Margin="10,3,5,3"
+                        Width="auto" FontSize="14"
                         SelectedDate="{Binding NewSharer.Birthday}"
                         materialDesign:HintAssist.Hint="Birthday"
                         materialDesign:HintAssist.IsFloating="True"/>
                 </Grid>
 
                 <TextBox 
-                    FontSize="14" Width="230" Margin="0,3,0,3"
+                    FontSize="14" Width="auto" Margin="5,3,5,3"
                     Text="{Binding Path=NewSharer.Email}"
                     Style="{StaticResource MaterialDesignTextBox}"
                     materialDesign:HintAssist.Hint="Email"
@@ -101,7 +102,7 @@
 
 
                 <TextBox 
-                    FontSize="14" Width="230" Margin="0,3,0,3"
+                    FontSize="14" Width="auto" Margin="5,3,5,3"
                     Text="{Binding Path=NewSharer.Phone}"
                     Style="{StaticResource MaterialDesignTextBox}"
                     materialDesign:HintAssist.Hint="Phone"
@@ -116,7 +117,7 @@
                 </TextBox>
 
                 <TextBox
-                    FontSize="14" Width="230" Margin="0,3,0,3"
+                    FontSize="14" Width="auto" Margin="5,3,5,3"
                     Text="{Binding Path=NewSharer.Address}"
                     Style="{StaticResource MaterialDesignTextBox}"
                     materialDesign:HintAssist.Hint="Address"
@@ -127,21 +128,21 @@
                 <ComboBox
                     x:Name="cbbSelectRoom"
                     Grid.Column="0"
-                    Width="230" Margin="0,3,0,3"
+                    Width="auto" Margin="5,3,5,3"
                     Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                     materialDesign:TextFieldAssist.UnderlineBrush="{DynamicResource PrimaryHueMidBrush}"
                     materialDesign:ColorZoneAssist.Mode="SecondaryLight"
                     materialDesign:HintAssist.Hint="Select room"
                     materialDesign:HintAssist.IsFloating="True"
                     FontSize="14" VerticalContentAlignment="Center"
-                    SelectedValue="{Binding Path=NewSharer.Room}"
+
                     ItemsSource="{Binding Path=SelectedRooms}"
-                    DisplayMemberPath="RoomName">
+                    DisplayMemberPath="RoomName" SelectionChanged="cbbSelectRoom_SelectionChanged">
                 </ComboBox>
 
                 <Button
                     x:Name="btnConfirm"
-                    Margin="0,5,0,0"
+                    Margin="5,5,5,0"
                     Content="Confirm" FontSize="14"
                     VerticalAlignment="Bottom"
                     Command="{Binding ConfirmAddSharerCommand}"
